media player mobile open

--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -35,7 +35,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    min-height: 792px;
+    // min-height: 792px;
     // min-width: 768px;
     height: 100%;
     display: flex;
