--- a/src/assets/styles/cmps/_queue-list.scss
+++ b/src/assets/styles/cmps/_queue-list.scss
@@ -103,14 +103,15 @@
             }
 
             .img-container {
-                width: 40px;
-                height: 40px;
+                width: 50px;
+                height: 50px;
                 margin-right: 16px;
 
                 img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    clip-path: inset(12.5% 0 12.5%);
                 }
             }
 
