--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -13,7 +13,7 @@
     overflow-x: inherit;
     padding: 0 16px;
 
-   
+
 
     .playlist-details-main {
         margin-left: 20px;
@@ -164,6 +164,7 @@
 
                             .index-display {
                                 width: 14px;
+
                                 p {
                                     display: none;
                                 }
@@ -220,14 +221,15 @@
                         }
 
                         .img-container {
-                            width: 40px;
-                            height: 40px;
+                            width: 50px;
+                            height: 50px;
                             margin-right: 16px;
 
                             img {
                                 width: 100%;
                                 height: 100%;
                                 object-fit: cover;
+                                clip-path: inset(12.5% 0 12.5% 0 round 0px);
                             }
                         }
 
