--- a/src/assets/styles/cmps/_app-navbar.scss
+++ b/src/assets/styles/cmps/_app-navbar.scss
@@ -2,12 +2,13 @@
     // flex: 1;
     grid-area: nav-bar;
     min-width: 200px;
-    background-color: rgba(57, 55, 55, 0.6);
+    background-color: rgba(8, 8, 8, 0.728);
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 99;
+    height: 80px;
     // color: #fff;
 
     * {
@@ -18,7 +19,7 @@
         padding: 20px 0 0 20px;
         background-color: rgb(57, 55, 55);
         position: initial;
-
+        height: auto;
     }
 
     .main-logo {
@@ -34,6 +35,7 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
+        padding: 0;
         
         li {
             @media(min-width:770px) {
