--- a/src/assets/styles/cmps/_playlist-details-header.scss
+++ b/src/assets/styles/cmps/_playlist-details-header.scss
@@ -4,18 +4,30 @@
     min-height: 300px;
     gap: 10px;
     margin: 0 -17px 0 -19px;
-    padding: 0 0 32px 32px;
+    padding: 65px 0 32px 32px;
     background-color: var(--background-dark);
-    align-items: end;
     margin-bottom: 32px;
+    flex-direction: column;
+
+    @media(min-width:770px) {
+        flex-direction: row;
+        align-items: end;
+    }
 
     .img-container {
-        align-self: flex-end;
-        height: 232px;
         margin-inline-end: 12px;
-        min-width: 232px;
         box-shadow: 0 0 15px 4px black;
         position: relative;
+        height: 150px;
+       max-width: 180px;
+        // aspect-ratio: 1/3;
+        align-self: center;
+
+        @media(min-width:770px) {
+            align-self: flex-end;
+            height: 232px;
+            min-width: 232px;
+        }
 
         &:hover .change-photo-btn {
             opacity: 1;
@@ -58,13 +70,22 @@
     }
 
     .playlist-description {
-        gap: 15px;
+        gap: 5px;
+
+        @media(min-width:770px) {
+            gap: 15px;
+
+        }
 
         .playlist-title {
             background-color: transparent;
             border: none;
             color: white;
-            font-size: 5rem;
+            font-size: 1.7rem;
+
+            @media(min-width:770px) {
+                font-size: 5rem;
+            }
 
             &:focus-visible {
                 outline: none;
