--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -35,7 +35,7 @@
         position: relative;
 
         .main-content {
-            padding-top: 60px;
+            padding: 60px 20px;
             bottom: 0;
             direction: inherit;
             height: auto;
