--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -22,7 +22,7 @@
 
         justify-content: space-between;
         position: fixed;
-        bottom: 75px;
+        bottom: 0;
         height: 100vh;
         flex-direction: column;
         padding: 24px 20px 32px;
