--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -104,7 +104,7 @@
         }
 
         .right-section {
-                display: none;
+            display: none;
             // position: absolute;
 
             // &>*:not(.queue-btn) {
@@ -167,6 +167,20 @@
                 font-size: 28px;
 
 
+            }
+
+            button.repeat-btn {
+                font-size: 24px;
+                position: relative;
+
+                svg {
+                    position: relative;
+                    top: 4px;
+                }
+
+                &.repeat {
+                    color: #1db954;
+                }
             }
 
             button.shuffle-btn {
