--- a/src/assets/styles/cmps/_playlist-preview.scss
+++ b/src/assets/styles/cmps/_playlist-preview.scss
@@ -6,15 +6,18 @@
     position: relative;
     transition: background-color .3s ease;
 
+    @media(min-width:770px) {
 
-    &:hover .playlist-preview-container .playlist-preview-content.icon-container {
-        opacity: 1;
+        &:hover .playlist-preview-container .playlist-preview-content.icon-container {
+            opacity: 1;
 
+        }
+
+        &:hover {
+            background: hsla(0, 0%, 100%, .2);
+        }
     }
 
-    &:hover {
-        background: hsla(0, 0%, 100%, .2);
-    }
 
 
     .playlist-preview-container {
