one yt component

--- a/src/assets/styles/cmps/_queue-list.scss
+++ b/src/assets/styles/cmps/_queue-list.scss
@@ -3,12 +3,15 @@
 
     h3.title {
         color: white;
-        margin-left: 2px;
+        font-size: 26px;
+        margin: 30px 0 20px 5px;
     }
 
     h4.mini-title {
         color: #A7A7A7;
-        margin-left: 2px;
+        font-family: curlyBold;
+        margin: 30px 0 5px 5px;
+        font-size: 18px;    
     }
 
     .queue-song-list {
