--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -13,7 +13,7 @@
     overflow-x: inherit;
     padding: 50px 16px;
 
-   
+
 
     .playlist-details-main {
         margin-left: 20px;
@@ -198,6 +198,7 @@
                         }
 
                         .index-display {
+                            width: 14px;
                             margin-right: 16px;
 
                             .volume-gif {
