--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,7 @@
 
 // PAGES
 @import 'pages/main-app';
+@import 'pages/home-page';
 @import 'pages/search-results';
 @import 'pages/playlist-details';
 @import 'pages/liked-songs';
