--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -15,7 +15,7 @@
             "nav-bar main-view"
             "now-playing-bar now-playing-bar";
         grid-template-columns: auto 1fr;
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: 0 1fr auto;
     }
 
     height: 100%;
