--- a/src/assets/styles/cmps/_login-page.scss
+++ b/src/assets/styles/cmps/_login-page.scss
@@ -62,17 +62,7 @@
             margin-top: 10px;
 
             input {
-                height: 38px;
-                background-color: #454545;
-                color: white;
-                padding: 0px 12px;
-                border: none;
-                font-size: 18px;
-
-                &:focus {
-                    outline: none;
-                    background-color: lighten(#454545, 5%)
-                }
+               @include black-input;
             }
 
             .sign-up-btn {
