--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -11,7 +11,7 @@
     @media(min-width:770px) {
 
         grid-template-areas:
-            "top-bar top-bar"
+            "nav-bar top-bar"
             "nav-bar main-view"
             "now-playing-bar now-playing-bar";
         grid-template-columns: auto 1fr;
