liking song 90% done

--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -8,6 +8,7 @@
     padding: 0 32px;
     background-color: var(--background-dark);
     gap: 16px;
+    z-index: 200;
 
     .header-nav-btns {
         gap: 16px;
