--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -6,4 +6,10 @@
     right: 0;
     left: 0;
     padding: 20px;
+
+    .greeting {
+        color: white;
+        font-family: 'curlyBold';
+        font-size: 34px;
+    }
 }
