--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -144,6 +144,7 @@
         width: 40%;
         display: flex;
         flex-direction: column;
+        gap: 5px;
 
         .buttons-container {
             display: flex;
