adding google auth login-signup

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'cmps/like-button';
 @import 'cmps/playlist-details-header';
 @import 'cmps/playlist-details-search';
+@import 'cmps/google-login-btn';
 
 // PAGES
 @import 'pages/main-app';
