--- a/src/assets/styles/base/_vars.scss
+++ b/src/assets/styles/base/_vars.scss
@@ -6,4 +6,10 @@
     --grid-gap: 24px;
     --grid-count: 4;
     --column-count:4;
+    @media(min-width:1200px ){
+        --column-count:5;
+    }
+    @media(min-width:1300px ){
+        --column-count:6;
+    }
 }
