--- a/src/assets/styles/cmps/_playlist-preview.scss
+++ b/src/assets/styles/cmps/_playlist-preview.scss
@@ -1,102 +1,62 @@
 .playlist-preview {
-    background-color: hsla(0, 0%, 100%, .1);
-    border-radius: 4px;
-    height: 80px;
-    overflow: hidden;
+    background: #181818;
+    border-radius: 5px;
+    flex: 1;
+    isolation: isolate;
+    padding: 16px;
     position: relative;
     transition: background-color .3s ease;
+    width: 100%;
+    cursor: pointer;
 
-    @media(min-width:770px) {
+    &:hover .img-container .icon-container {
+        opacity: 1;
+        bottom: 8px;
+    }
 
-        &:hover .playlist-preview-container .playlist-preview-content.icon-container {
-            opacity: 1;
+    &:hover {
+        background: #282828
+    }
 
+    .img-container {
+        box-shadow: 0 8px 24px rgb(0 0 0 / 50%);
+        padding-bottom: 100%;
+        position: relative;
+        width: 100%;
+        margin-bottom: 16px;
+
+        img {
+            border-radius: 3px;
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
         }
 
-        &:hover {
-            background: hsla(0, 0%, 100%, .2);
+        .icon-container {
+            margin-left: 8px;
+            border-radius: 500px;
+            display: flex;
+            opacity: 0;
+            position: absolute;
+            right: 8px;
+            bottom: 3px;
+            transition: all .3s ease;
+            z-index: 10;
+
+            &.playing {
+                opacity: 1;
+                bottom: 8px;
+            }
+
+            button {
+                @include green-play-btn
+            }
         }
     }
 
-
-
-    .playlist-preview-container {
-        gap: 10px;
-
-        .img-container {
-            -webkit-box-align: center;
-            -webkit-box-pack: center;
-            -ms-flex-pack: center;
-            align-items: center;
-            background-color: hsla(0, 0%, 100%, .2);
-            box-shadow: 0 8px 24px rgb(0 0 0 / 50%);
-            display: -webkit-box;
-            display: flex;
-            justify-content: center;
-            position: relative;
-            width: 80px;
-            height: 80px;
-            min-width: 80px;
-
-            img {
-                display: block;
-                height: 100%;
-                left: 0;
-                position: absolute;
-                top: 0;
-                width: 100%;
-            }
-
-        }
-
-        .playlist-preview-content {
-            -webkit-box-align: center;
-            -webkit-box-flex: 1;
-            -webkit-box-pack: justify;
-            color: #fff;
-            display: -webkit-box;
-            flex: 1;
-            padding: 0 16px;
-
-            &.title {
-                a {
-                    color: #fff;
-
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-            }
-
-            &.icon-container {
-                margin-left: 8px;
-                border-radius: 500px;
-                display: flex;
-                opacity: 0;
-                position: absolute;
-                right: 10px;
-                transition: all .3s ease;
-                z-index: 2;
-
-                button {
-                    @include green-play-btn
-                }
-            }
-
-            &.pause-container {
-                margin-left: 8px;
-                border-radius: 500px;
-                display: flex;
-                position: absolute;
-                right: 10px;
-                transition: all .3s ease;
-                z-index: 2;
-
-                button {
-                    @include green-play-btn
-                }
-
-            }
-        }
+    .playlist-info {
+        min-height: 62px
     }
 }
