--- a/src/assets/styles/cmps/_recently-played-list.scss
+++ b/src/assets/styles/cmps/_recently-played-list.scss
@@ -1,4 +1,4 @@
-.playlist-list{
+.recently-played-list{
     display: grid;
     grid-gap: 16px 24px;
     grid-template: auto/repeat(auto-fill,minmax(max(270px,25%),1fr));
