--- a/src/assets/styles/mixins/_mixins.scss
+++ b/src/assets/styles/mixins/_mixins.scss
@@ -130,3 +130,12 @@
         background-color: lighten(#454545, 5%)
     }
 }
+
+@mixin main-content-scroll {
+    overflow-y: scroll;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+}
