--- a/src/assets/styles/cmps/_app-navbar.scss
+++ b/src/assets/styles/cmps/_app-navbar.scss
@@ -155,7 +155,7 @@
                     direction: inherit;
                     height: auto;
                     left: 0;
-                    margin: 0;
+                    margin: 0 0 60px 0;
                     overflow: visible;
                     padding: 0;
                     position: absolute;
@@ -168,7 +168,10 @@
                     ul {
                         padding: 0;
 
+
                         li {
+                            
+
                             a {
                                 @include nav-link;
                             }
