--- a/src/assets/styles/cmps/_playlist-details-search.scss
+++ b/src/assets/styles/cmps/_playlist-details-search.scss
@@ -10,7 +10,7 @@
 
     form {
         position: relative;
-        width: 365px;
+        max-width: 365px;
         margin-bottom: 24px;
 
         input {
@@ -77,6 +77,7 @@
 
                 img {
                     height: 100%;
+                    clip-path: inset(12.5% 0 12.5%);
                 }
 
                 .photo-play {
@@ -139,7 +140,7 @@
                 transition: .3s;
 
                 &:hover {
-                    border:1px solid white;
+                    border: 1px solid white;
                     transition: .3s;
                 }
             }
