--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import 'cmps/playlist-preview';
 @import 'cmps/library-playlist-container';
 @import 'cmps/liked-songs-preview';
+@import 'cmps/need-to-login-modal';
 
 // PAGES
 @import 'pages/main-app';
