--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -50,10 +50,13 @@
 
             .loading-anim {
                 height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
-                img {
-                    height: 100%;
-                }
+                // img {
+                //     height: 100%;
+                // }
             }
 
         }
