--- a/src/assets/styles/pages/_search-results.scss
+++ b/src/assets/styles/pages/_search-results.scss
@@ -2,6 +2,9 @@
     margin-top: 20px;
     color: #fff;
     @include main-content-scroll;
+    top: 63px;
+    left: 30px;
+    overflow-x: hidden;
 
     .search-bar-results {
         flex-grow: 1;
@@ -55,80 +58,80 @@
     }
 
     .search-results-container {
-        grid-gap: var(--grid-gap);
-        display: grid;
-        grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+        // grid-gap: var(--grid-gap);
+        // display: grid;
+        // grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
 
         .search-results {
-            grid-gap: var(--grid-gap);
-            display: grid;
-            grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
-            // grid-template-rows: repeat(4, 500px);
-            grid-column: 1/-1;
-            row-gap: 35px;
+            // grid-gap: var(--grid-gap);
+            // display: grid;
+            // grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+            // // grid-template-rows: repeat(4, 500px);
+            // grid-column: 1/-1;
+            // row-gap: 35px;
 
+            flex-direction: column;
+            // .top-result {
+            //     grid-column: 1/3;
+            //     display: flex;
+            //     -ms-flex-direction: column;
+            //     flex-direction: column;
+            //     margin-bottom: 16px;
+            //     min-width: 100%;
+            //     position: relative;
 
-            .top-result {
-                grid-column: 1/3;
-                display: flex;
-                -ms-flex-direction: column;
-                flex-direction: column;
-                margin-bottom: 16px;
-                min-width: 100%;
-                position: relative;
+            //     .top-result-content {
 
-                .top-result-content {
+            //         position: relative;
 
-                    position: relative;
+            //         .content-container {
 
-                    .content-container {
+            //             background: #181818;
+            //             border-radius: 7px;
+            //             padding: 20px 20px 52px;
+            //             position: relative;
+            //             transition: background-color .3s ease;
+            //             width: 100%;
 
-                        background: #181818;
-                        border-radius: 7px;
-                        padding: 20px 20px 52px;
-                        position: relative;
-                        transition: background-color .3s ease;
-                        width: 100%;
+            //             &:hover .icon-container {
+            //                 opacity: 1;
+            //             }
 
-                        &:hover .icon-container {
-                            opacity: 1;
-                        }
+            //             &:hover {
+            //                 background: #282828;
+            //             }
 
-                        &:hover {
-                            background: #282828;
-                        }
+            //             .img-container {
+            //                 padding-bottom: 50px;
+            //                 width: 92px;
 
-                        .img-container {
-                            padding-bottom: 50px;
-                            width: 92px;
+            //                 img {
+            //                     clip-path: inset(12.5% 0 12.5%);
+            //                 }
 
-                            img {
-                                clip-path: inset(12.5% 0 12.5%);
-                            }
+            //             }
 
-                        }
+            //             .icon-container {
+            //                 position: absolute;
+            //                 bottom: 3px;
+            //                 right: 20px;
+            //                 min-width: 0;
+            //                 opacity: 0;
+            //                 transition: all .3s ease;
 
-                        .icon-container {
-                            position: absolute;
-                            bottom: 3px;
-                            right: 20px;
-                            min-width: 0;
-                            opacity: 0;
-                            transition: all .3s ease;
+            //                 button {
+            //                     @include green-play-btn
+            //                 }
+            //             }
 
-                            button {
-                                @include green-play-btn
-                            }
-                        }
-
-                        h3 {
-                            white-space: nowrap;
-                            overflow-x: hidden;
-                            text-overflow: ellipsis;
-                        }
-                    }
-                }
-            }
+            //             h3 {
+            //                 white-space: nowrap;
+            //                 overflow-x: hidden;
+            //                 text-overflow: ellipsis;
+            //             }
+            //         }
+            //     }
+            // }
 
             .top-songs {
                 grid-column: 3/-1;
@@ -141,9 +144,10 @@
             }
 
             .top-songs-results-container {
+                margin-bottom: 30px;
 
                 .top-songs-results {
-                    height: 56px;
+                    height: 75px;
                     border: 1px solid transparent;
                     border-radius: 4px;
                     padding: 0 16px;
@@ -166,8 +170,8 @@
                         flex: 1;
 
                         .img-container {
-                            height: 40px;
-                            width: 40px;
+                            height: 65px;
+                            width: 65px;
                             margin-inline-end: 10px;
                             position: relative;
 
@@ -202,9 +206,9 @@
                                 'channel';
                             grid-template-columns: 250px;
                             grid-template-rows: 14px 10px;
-                            gap: 8px;
+                            gap: 16px;
                             position: relative;
-                            bottom: -9px;
+                            bottom: -13px;
 
                             .song-title {
                                 grid-area: title;
@@ -235,6 +239,18 @@
                             }
                         }
                     }
+                }
+            }
+
+            .playlists-results {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+
+                .playlists-results-container {
+                    display: grid;
+                    grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+
                 }
             }
         }
