dynamic background for playlist,reentely played done

--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -86,6 +86,7 @@
     .header-user {
         font-size: 16px;
         position: relative;
+        gap: 5px;
 
         .user-btn {
             border-radius: 50%;
