--- a/src/assets/styles/cmps/_playlist-details-header.scss
+++ b/src/assets/styles/cmps/_playlist-details-header.scss
@@ -3,11 +3,21 @@
     max-height: 500px;
     min-height: 300px;
     gap: 10px;
-    margin: 0 -17px 0 -19px;
+    margin: 50px -17px 0 -19px;
     padding: 65px 0 32px 32px;
     background-color: var(--background-dark);
     margin-bottom: 32px;
     flex-direction: column;
+    box-sizing: border-box;
+    position: relative;
+
+    .color-container {
+        height: calc(130% + 50px);
+        width: calc(100% + 32px);
+        position: absolute;
+        left: 0;
+        top: -50px;
+    }
 
     @media(min-width:770px) {
         flex-direction: row;
@@ -19,7 +29,7 @@
         box-shadow: 0 0 15px 4px black;
         position: relative;
         height: 150px;
-       max-width: 180px;
+        max-width: 180px;
         // aspect-ratio: 1/3;
         align-self: center;
 
@@ -70,6 +80,7 @@
     }
 
     .playlist-description {
+        z-index: 100;
         gap: 5px;
 
         @media(min-width:770px) {
@@ -83,7 +94,24 @@
             color: white;
             font-size: 1.7rem;
 
+            // from like 900-1000 it should have a mobile like arrangement
             @media(min-width:770px) {
+                font-size: 3rem;
+            }
+
+            @media(min-width:920px) {
+                font-size: 3.5rem;
+            }
+
+            @media(min-width:1020px) {
+                font-size: 4rem;
+            }
+
+            @media(min-width:1100px) {
+                font-size: 4.5rem;
+            }
+
+            @media(min-width:1200px) {
                 font-size: 5rem;
             }
 
