--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -50,13 +50,12 @@
 
             .loading-anim {
                 height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
+                background: black;
+                padding-bottom: 40px;
 
-                // img {
-                //     height: 100%;
-                // }
+                img {
+                    object-fit: contain;
+                }
             }
 
         }
