--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -9,24 +9,29 @@ html {
     ::-webkit-scrollbar {
         width: 10px;
         height: 200px;
-        // margin-inline-end: 5px;
+        display: none;
+
+        @media(min-width:770px) {
+            display: initial;
+        }
     }
 
     /* Track */
-      ::-webkit-scrollbar-track {
+    ::-webkit-scrollbar-track {
         // box-shadow: inset 0 0 5px grey;
         background-color: rgba(0, 0, 0, 0.027);
-      }
+    }
 
     /* Handle */
     ::-webkit-scrollbar-thumb {
         height: 50px;
         background-color: #5e5c5c8c;
-        transition:  .3s;
+        transition: .3s;
+
         &:hover {
             background-color: #5e5c5cd2;
-            transition:  1s;
-                     
+            transition: 1s;
+
         }
 
     }
@@ -35,11 +40,14 @@ html {
 body {
     margin: 0;
     padding: 0;
-    // min-height: 792px;
-    // min-width: 768px;
+
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.iframe-container {
+    height: 0;
 }
 
 #root {
