--- a/src/assets/styles/cmps/_app-navbar.scss
+++ b/src/assets/styles/cmps/_app-navbar.scss
@@ -20,7 +20,7 @@
 
     @media(min-width:770px) {
         padding: 20px 0 0 20px;
-        background-color: #000;
+        background-color: #060606;
         position: relative;
         height: auto;
         width: 263px;
@@ -73,24 +73,7 @@
         height: 55%;
 
         .create-playlist {
-            cursor: pointer;
-            @include nav-link;
-            margin-bottom: 15px;
-
-            div {
-                height: 24px;
-                width: 24px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 3px;
-                background-color: #fff;
-
-                span {
-                    color: black
-                }
-            }
-
+            @include create-playlist;
         }
 
         .liked-songs {
