--- a/src/assets/styles/cmps/_music-player-mobile.scss
+++ b/src/assets/styles/cmps/_music-player-mobile.scss
@@ -27,7 +27,7 @@
     .mobile-right {
         display: flex;
         justify-content: flex-start;
-
+        width: 85%;
 
 
         .song-image {
@@ -41,10 +41,22 @@
 
         .names-container {
             font-size: 14px;
+            overflow-x: hidden;
             color: white;
 
+            .song-name {
+                white-space: nowrap;
+                height: 24px;
+                width: fit-content;
+                color: white;
+                font-size: 15px;
+                position: relative;
+                transition: 1s;
+            }
+
             .artist-name {
-                opacity: 0.7;
+                color: var(--text-subdued);
+                font-size: 12px;
             }
         }
     }
