--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -51,19 +51,34 @@
             .below-image {
                 justify-content: space-between;
                 width: 100%;
-                padding: 0 16px;
+                padding: 0;
                 align-items: center;
 
                 .names-container {
+                    flex: 1;
+                    margin: 0;
+
                     .song-name {
-                        font-size: 20px;
+                        font-size: 16px;
                         font-weight: 800;
                         margin: 0;
                     }
 
                     .artist-name {
                         margin: 0;
-                        font-size: 16px;
+                        font-size: 14px;
+                    }
+                }
+
+                .like-song {
+                    margin-left: 8px;
+
+                    .like-btn {
+                        transform: translateX(-4px);
+
+                        svg {
+                            width: 35px;
+                        }
                     }
                 }
             }
