--- a/src/assets/styles/cmps/_playlist-details-header.scss
+++ b/src/assets/styles/cmps/_playlist-details-header.scss
@@ -3,10 +3,8 @@
     max-height: 500px;
     min-height: 300px;
     gap: 10px;
-    margin: 50px -17px 0 -19px;
-    padding: 65px 0 32px 32px;
-    background-color: var(--background-dark);
-    margin-bottom: 32px;
+    margin: 50px -17px 32px -19px;
+    padding: 45px 0 32px 32px;
     flex-direction: column;
     box-sizing: border-box;
     position: relative;
@@ -19,9 +17,14 @@
         top: -50px;
     }
 
-    @media(min-width:770px) {
+    @media(min-width:500px) {
+        margin-bottom: 45px;
+    }
+
+    @media(min-width:1020px) {
         flex-direction: row;
         align-items: end;
+        margin-bottom: 32px;
     }
 
     .img-container {
@@ -30,10 +33,9 @@
         position: relative;
         height: 150px;
         max-width: 180px;
-        // aspect-ratio: 1/3;
         align-self: center;
 
-        @media(min-width:770px) {
+        @media(min-width:1020px) {
             align-self: flex-end;
             height: 232px;
             min-width: 232px;
@@ -83,7 +85,7 @@
         z-index: 100;
         gap: 5px;
 
-        @media(min-width:770px) {
+        @media(min-width:1020px) {
             gap: 15px;
 
         }
@@ -94,7 +96,10 @@
             color: white;
             font-size: 1.7rem;
 
-            // from like 900-1000 it should have a mobile like arrangement
+            @media(min-width:500px) {
+                font-size: 2.3rem;
+            }
+
             @media(min-width:770px) {
                 font-size: 3rem;
             }
