--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -10,6 +10,28 @@
     gap: 16px;
     z-index: 200;
 
+    .create-playlist {
+        @include create-playlist;
+        margin: 0;
+        opacity: 0.9;
+
+        &.disabled {
+            opacity: 0.6;
+        }
+
+        div {
+            width: 34px;
+            height: 34px;
+
+            span {
+                font-size: 2.5rem;
+            }
+        }
+
+       
+    }
+
+
     .header-nav-btns {
         gap: 16px;
 
