--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -1,6 +1,6 @@
 .home-page {
     @include main-content-scroll;
-    padding: 20px 0 20px 20px;
+    padding: 12px;
     top: 52px;
 
     @media(min-width:770px) {
