--- a/src/assets/styles/pages/_liked-songs.scss
+++ b/src/assets/styles/pages/_liked-songs.scss
@@ -8,21 +8,40 @@
     .img-container {
 
         .liked-songs-img {
-            width: 228px;
-            height: 228px;
+            width: 150px;
+            height: 150px;
             display: flex;
             background: linear-gradient(135deg, #450af5, #c4efd9);
             border-radius: 3px;
-            font-size: 90px;
+            font-size: 65px;
             position: relative;
 
             span {
                 position: absolute;
-                top: 66px;
-                left: 72px;
+                top: 42px;
+                left: 47px;
 
-                //check out how is it suppost to act in mobile compared to playlist details
+            }
+        }
+
+        @media(min-width:1020px) {
+            align-self: flex-end;
+            height: 232px;
+            min-width: 232px;
+
+            .liked-songs-img {
+                width: 228px;
+                height: 228px;
+                font-size: 90px;
+
+                span {
+                    top: 66px;
+                    left: 72px;
+
+                }
             }
         }
     }
+
+
 }
