add songs cache and search results filter

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,6 +27,7 @@
 @import 'cmps/library-playlist-container';
 @import 'cmps/liked-songs-preview';
 @import 'cmps/need-to-login-modal';
+@import 'cmps/search-filter';
 
 // PAGES
 @import 'pages/main-app';
