--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,6 +28,7 @@
 @import 'cmps/liked-songs-preview';
 @import 'cmps/need-to-login-modal';
 @import 'cmps/search-filter';
+@import 'cmps/search-default';
 
 // PAGES
 @import 'pages/main-app';
