--- a/src/assets/styles/cmps/_need-to-login-modal.scss
+++ b/src/assets/styles/cmps/_need-to-login-modal.scss
@@ -11,7 +11,7 @@
     line-height: 1.4;
     outline: 0;
     text-align: start;
-
+    z-index:100;
     .modal-content {
         min-width: 300px;
         padding: 16px;
