--- a/src/assets/styles/pages/_search-results.scss
+++ b/src/assets/styles/pages/_search-results.scss
@@ -3,8 +3,13 @@
     color: #fff;
     @include main-content-scroll;
     top: 63px;
-    left: 30px;
+    left: 10px;
+    right: 10px;
     overflow-x: hidden;
+
+    .pusher {
+        height: 140px;
+    }
 
     .search-bar-results {
         flex-grow: 1;
@@ -58,80 +63,11 @@
     }
 
     .search-results-container {
-        // grid-gap: var(--grid-gap);
-        // display: grid;
-        // grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
 
         .search-results {
-            // grid-gap: var(--grid-gap);
-            // display: grid;
-            // grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
-            // // grid-template-rows: repeat(4, 500px);
-            // grid-column: 1/-1;
-            // row-gap: 35px;
+
 
             flex-direction: column;
-            // .top-result {
-            //     grid-column: 1/3;
-            //     display: flex;
-            //     -ms-flex-direction: column;
-            //     flex-direction: column;
-            //     margin-bottom: 16px;
-            //     min-width: 100%;
-            //     position: relative;
-
-            //     .top-result-content {
-
-            //         position: relative;
-
-            //         .content-container {
-
-            //             background: #181818;
-            //             border-radius: 7px;
-            //             padding: 20px 20px 52px;
-            //             position: relative;
-            //             transition: background-color .3s ease;
-            //             width: 100%;
-
-            //             &:hover .icon-container {
-            //                 opacity: 1;
-            //             }
-
-            //             &:hover {
-            //                 background: #282828;
-            //             }
-
-            //             .img-container {
-            //                 padding-bottom: 50px;
-            //                 width: 92px;
-
-            //                 img {
-            //                     clip-path: inset(12.5% 0 12.5%);
-            //                 }
-
-            //             }
-
-            //             .icon-container {
-            //                 position: absolute;
-            //                 bottom: 3px;
-            //                 right: 20px;
-            //                 min-width: 0;
-            //                 opacity: 0;
-            //                 transition: all .3s ease;
-
-            //                 button {
-            //                     @include green-play-btn
-            //                 }
-            //             }
-
-            //             h3 {
-            //                 white-space: nowrap;
-            //                 overflow-x: hidden;
-            //                 text-overflow: ellipsis;
-            //             }
-            //         }
-            //     }
-            // }
 
             .top-songs {
                 grid-column: 3/-1;
