--- a/src/assets/styles/pages/_search-results.scss
+++ b/src/assets/styles/pages/_search-results.scss
@@ -57,7 +57,13 @@
         }
     }
 
+    .search-results-container {
+       
+        .search-results {
+        
 
+            flex-direction: column;
+           
 
             .top-songs {
                 grid-column: 3/-1;
