--- a/src/assets/styles/cmps/_playlists-list.scss
+++ b/src/assets/styles/cmps/_playlists-list.scss
@@ -9,6 +9,7 @@
     color: #fff;
     overflow-x: scroll;
     overflow-y: hidden;
+    gap: 20px;
 
     &::-webkit-scrollbar {
         display: none;
@@ -22,9 +23,11 @@
     .topic {
         position: sticky;
         left: 0;
+        font-size: 1.5rem;
+
         @media(min-width: 770px) {
-           position: static;
-        } 
+            position: static;
+        }
     }
 
     .playlist-preview-container {
@@ -36,7 +39,7 @@
         right: 0;
         left: 0;
 
-  
+
 
         width: 1185px;
 
@@ -45,7 +48,7 @@
             display: grid;
             grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
             grid-auto-rows: 0;
-            grid-template-rows: 1fr;
+            grid-template-rows: minmax(282px, 1fr);
             width: auto;
 
         }
