--- a/src/assets/styles/pages/_genre-page.scss
+++ b/src/assets/styles/pages/_genre-page.scss
@@ -1,6 +1,6 @@
 .genre-page {
     @include main-content-scroll;
-    padding: 12px;
+    padding: 12px 30px;
     top: 52px;
     color: #fff;
 
@@ -10,13 +10,31 @@
 
     h1 {
         margin: 30px 0;
+        @media(min-width:770px) {
+            margin-inline-start: 18px;
+        }
     }
 
     .playlists-container {
         display: grid;
+        column-gap: 30px;
         grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
-        gap: 15px;
         grid-auto-rows: auto;
         grid-template-rows: minmax(150px, 1fr);
+
+        .playlist-preview {
+            padding: 0;
+            width: 170px;
+        }
+
+        @media(min-width:770px) {
+            gap: 15px;
+            padding: 20px;
+
+            .playlist-preview {
+                padding: inherit;
+                width: inherit;
+            }
+        }
     }
 }
